--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,43 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/.pnp
+node_modules
+.pnp
 .pnp.js
 
 # testing
-/coverage
+coverage
 
-# production
-/build
+# database
+/prisma/db.sqlite
+/prisma/db.sqlite-journal
+
+# next.js
+.next/
+out/
+build
 
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+*.pem
 
+# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.pnpm-debug.log*
+
+# local env files
+.env
+.env*.local
+
+# turbo
+.turbo
+
+.env
+
+# typescript
+*.tsbuildinfo
+.vercel
+
+.parcel-cache
