--- a/packages/next-pay-core/package.json
+++ b/packages/next-pay-core/package.json
@@ -18,12 +18,13 @@
   },
   "devDependencies": {
     "@swc/core": "^1.3.23",
-    "eslint-config-drimo": "*",
+    "@types/cookie": "^0.5.1",
     "@types/mercadopago": "^1.5.8",
-    "tsconfig": "*",
+    "eslint-config-drimo": "*",
     "route-trie": "^3.0.0",
-    "typescript": "5.0",
-    "tsup": "^6.7.0"
+    "tsconfig": "*",
+    "tsup": "^6.7.0",
+    "typescript": "5.0"
   },
   "dependencies": {
     "@meanie/mongoose-to-json": "^2.6.0"
