--- a/packages/next-pay/package.json
+++ b/packages/next-pay/package.json
@@ -11,11 +11,13 @@
   },
   "peerDependencies": {
     "reflect-metadata": "^0.1.13",
+    "next": "^12.2.5 || ^13",
     "zod": "^3.21.4"
   },
   "devDependencies": {
     "@swc/core": "^1.3.23",
     "eslint-config-drimo": "*",
+    "next": "13.3.0",
     "tsconfig": "*",
     "tsup": "^6.7.0",
     "typescript": "5.0"
