--- a/apps/live-demo/package.json
+++ b/apps/live-demo/package.json
@@ -9,17 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@typegoose/typegoose": "^11.4.1",
     "@types/node": "20.5.1",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
+    "mongoose": "^7.4.3",
     "next": "13.4.19",
+    "next-pay": "*",
+    "next-pay-core": "*",
+    "next-pay-sdk": "*",
     "postcss": "8.4.14",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
+    "typedi": "^0.10.0",
     "typescript": "5.1.6"
   }
 }
