--- a/apps/live-demo/package.json
+++ b/apps/live-demo/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "10.4.15",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
+    "jotai": "^2.3.1",
     "mongoose": "^7.4.3",
     "next": "13.4.19",
     "next-pay": "*",
@@ -24,6 +25,7 @@
     "postcss": "8.4.14",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "swr": "^2.2.1",
     "tailwindcss": "3.3.3",
     "typedi": "^0.10.0",
     "typescript": "5.1.6"
