--- a/apps/live-demo/package.json
+++ b/apps/live-demo/package.json
@@ -14,9 +14,12 @@
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "jotai": "^2.3.1",
+    "lucide-react": "^0.268.0",
     "mongoose": "^7.4.3",
     "next": "13.4.19",
     "next-pay": "*",
@@ -26,7 +29,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "swr": "^2.2.1",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
+    "tailwindcss-animate": "^1.0.6",
     "typedi": "^0.10.0",
     "typescript": "5.1.6"
   }
