--- a/apps/live-demo/package.json
+++ b/apps/live-demo/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@typegoose/typegoose": "^11.4.1",
     "@types/node": "20.5.1",
