--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "devDependencies": {
     "eslint-config-drimo": "*",
     "prettier": "latest",
-    "turbo": "latest",
+    "turbo": "1.10.12",
     "typescript": "5.0"
   },
   "engines": {
