--- a/apps/live-demo/package.json
+++ b/apps/live-demo/package.json
@@ -35,6 +35,7 @@
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
     "typedi": "^0.10.0",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "zod": "3.21.4"
   }
 }
