--- a/packages/next-pay-core/package.json
+++ b/packages/next-pay-core/package.json
@@ -20,8 +20,8 @@
     "@swc/core": "^1.3.23",
     "@types/cookie": "^0.5.1",
     "@types/mercadopago": "^1.5.8",
-    "eslint-config-drimo": "*",
-    "tsconfig": "*",
+    "eslint-config-drimo": "workspace:*",
+    "tsconfig": "workspace:*",
     "typescript": "5.2.2",
     "tsup": "^6.7.0"
   },
