--- a/packages/next-pay/package.json
+++ b/packages/next-pay/package.json
@@ -16,14 +16,14 @@
   },
   "devDependencies": {
     "@swc/core": "^1.3.23",
-    "eslint-config-drimo": "*",
+    "eslint-config-drimo": "workspace:*",
     "next": "13.3.0",
-    "tsconfig": "*",
+    "tsconfig": "workspace:*",
     "tsup": "^6.7.0",
     "typescript": "5.2.2"
   },
   "dependencies": {
-    "next-pay-core": "*"
+    "next-pay-core": "workspace:*"
   },
   "openSource": true
 }
