--- a/apps/live-demo/package.json
+++ b/apps/live-demo/package.json
@@ -24,9 +24,9 @@
     "lucide-react": "^0.268.0",
     "mongoose": "^7.4.3",
     "next": "13.4.19",
-    "next-pay": "workspace:*",
-    "next-pay-core": "workspace:*",
-    "next-pay-sdk": "workspace:*",
+    "next-pay": "*",
+    "next-pay-core": "*",
+    "next-pay-sdk": "*",
     "postcss": "8.4.14",
     "react": "18.2.0",
     "react-dom": "18.2.0",
