--- a/packages/fintoc-html/package.json
+++ b/packages/fintoc-html/package.json
@@ -6,7 +6,8 @@
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "source": "src/index.html",
   "scripts": {
-    "dev": "parcel"
+    "dev": "parcel",
+    "build": "parcel build"
   },
   "devDependencies": {
     "eslint-config-drimo": "*",
